--- a/style.css
+++ b/style.css
@@ -42,3 +42,15 @@
  {
    transform: scale(1.15);
  }
+ @supports (display: grid) {
+   .gallery 
+   {
+     display: grid;
+     grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+     grid-gap: 2rem;
+   }
+       	.gallery,
+       	.gallery-item {
+       	  margin: 0;
+       	}
+       	}
